<resources>
    <string name="app_name">Файлы</string>
    <string name="permission_required">Требуются разрешения для доступа к файлам</string>
    <string name="permission_denied">Разрешения не предоставлены</string>
    <string name="folder">Папка</string>
    <string name="file">Файл</string>
    <string name="delete_confirmation">Вы уверены?</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="open">Открыть</string>
    <string name="copy">Копировать</string>
    <string name="move">Переместить</string>
    <string name="cut">Вырезать</string>
    <string name="paste">Вставить</string>
    <string name="rename">Переименовать</string>
    <string name="properties">Свойства</string>
    <string name="file_options">Опции файла: %s</string>
    <string name="name">Имя</string>
    <string name="path">Путь</string>
    <string name="type">Тип</string>
    <string name="size">Размер</string>
    <string name="modified">Изменен</string>
    <string name="new_folder">Новая папка</string>
    <string name="search">Поиск</string>
    <string name="this_pc">Этот ПК</string>
    <string name="documents">Документы</string>
    <string name="downloads">Загрузки</string>
    <string name="pictures">Изображения</string>
    <string name="videos">Видео</string>
    <string name="music">Музыка</string>
    <string name="sort_by_name">По имени</string>
    <string name="sort_by_date">По дате</string>
    <string name="sort_by_size">По размеру</string>
    <string name="sort_by_type">По типу</string>
    <string name="show_hidden">Показать скрытые файлы</string>
    <string name="hide_hidden">Скрыть скрытые файлы</string>
    <string name="view_details">Вид: Детали</string>
    <string name="view_list">Вид: Список</string>
    <string name="view_icons">Вид: Значки</string>
    <string name="select_all">Выделить все</string>
    <string name="deselect_all">Снять выделение</string>
    <string name="recycle_bin">Корзина</string>
    <string name="empty_recycle_bin">Очистить корзину</string>
    <string name="restore">Восстановить</string>
    <string name="extension">Расширение</string>
    <string name="contents">Содержимое</string>
    <string name="search">Поиск</string>
    <string name="home">Домой</string>
    <string name="back">Назад</string>
    <string name="refresh">Обновить</string>
    <string name="menu">Меню</string>
</resources>
