<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_new_folder"
        android:title="@string/new_folder" />
    <item
        android:id="@+id/action_view_details"
        android:title="@string/view_details" />
    <item
        android:id="@+id/action_view_icons"
        android:title="@string/view_icons" />
    <item
        android:id="@+id/action_sort_name"
        android:title="@string/sort_by_name" />
    <item
        android:id="@+id/action_sort_date"
        android:title="@string/sort_by_date" />
    <item
        android:id="@+id/action_sort_size"
        android:title="@string/sort_by_size" />
    <item
        android:id="@+id/action_select_all"
        android:title="@string/select_all" />
</menu>
